--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
   "dependencies": {
     "@langchain/core": "^0.3.49",
     "@langchain/google-genai": "^0.2.5",
-    "@langchain/openai": "^0.5.7",
+    "@langchain/openai": "^0.5.12",
     "@nestjs/common": "^11.0.1",
     "@nestjs/config": "^4.0.2",
     "@nestjs/core": "^11.0.1",
@@ -35,6 +35,7 @@
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
     "dropbox": "^10.34.0",
+    "langchain": "^0.3.27",
     "mongoose": "^8.13.1",
     "multer": "^1.4.5-lts.2",
     "passport": "^0.7.0",
